# Mastering-Cpp-Game-Development

./: README.md
Chapter02/: hello.cpp  hello.h  main.cpp
Chapter02/MemoryMgr/: MemoryMgr.sln
Chapter02/MemoryMgr/ConsoleApplication1/: ConsoleApplication.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
Chapter02/MemoryMgr/MemoryMgr/: MemoryMgr.cpp  MemoryMgr.def  MemoryMgr.h  MemoryMgr.licenseheader  MemoryMgr.vcxproj  MemoryMgr.vcxproj.filters
Chapter03/: CMakeLists.txt
Chapter03/BookEngine/: BookEngine.cpp  BookEngine.h  CMakeLists.txt  IGame.cpp  IGame.h  IOManager.cpp  IOManager.h  IScreen.h  InputManager.cpp  InputManager.h  ReadMe.txt  RuntimeLog.txt  ScreenList.cpp  ScreenList.h  Timing.cpp  Timing.h  Window.cpp  Window.h
Chapter03/BookEngine/Debug/: BookEngine.exp  BookEngine.lib
Chapter03/Example/: App.cpp  CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.h  RuntimeLog.txt
Chapter03/lib/OSX/: libmikmod.2.0.4.dylib  libvorbis.0.3.0.dylib
Chapter04/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ExampleCode.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Chapter04/BookEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BookEngine.sln  BookEngine.vcxproj  BookEngine.vcxproj.filters  CMakeLists.txt  Camera2D.h  Camera3D.cpp  FragmentShader.frag  IGame.cpp  Mesh.h  SpriteBatch.cpp  TextureCache.cpp  Vertex2D.h  cmake_install.cmake
Chapter04/BookEngine/Debug/: BookEngine.exp  BookEngine.lib
Chapter04/Lib/OSX/: libFLAC.8.dylib  libSDL2_ttf.dylib  libsmpeg.dylib  libvorbis.0.dylib
Chapter04/ModelExample/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ErrorLog.txt  GamePlayScreen.cpp  GamePlayScreen.h  ModelExample.sln  ModelExample.vcxproj  ModelExample.vcxproj.filters  RuntimeLog.txt  cmake_install.cmake
Chapter04/Shaders/: FragmentShader.frag
Chapter04/SoundExample/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.h  RuntimeLog.txt  SoundExample.sln  SoundExample.vcxproj  SoundExample.vcxproj.filters  cmake_install.cmake
Chapter04/TextureExample/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  App.cpp  CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.h  RuntimeLog.txt  TextureExample.sln  TextureExample.vcxproj  TextureExample.vcxproj.filters  cmake_install.cmake
Chapter04/TextureExample/Shaders/: Texture.frag
Chapter05/: CMakeLists.txt
Chapter05/BookEngine/: IState.h  ImageLoader.cpp  InputManager.cpp  Logger.h  ParticleBatch2D.h  ReadMe.txt  ScreenList.cpp  Sprite.h  TextureCache.h  Timing.cpp
Chapter05/BookEngine/Debug/: BookEngine.exp  BookEngine.lib
Chapter05/GameStateExample/: CMakeLists.txt  ErrorLog.txt  GamePlayScreen.cpp  GamePlayScreen.h  GameState.cpp  GameState.h  GameStates.cpp  GameStates.h  RuntimeLog.txt
Chapter05/Lib/OSX/: libFLAC.8.0.1.dylib  libSDL2_mixer.dylib  (+2 more)
Chapter05/Meshes/: floor.mtl
Chapter05/PhysicsExample/: App.cpp  App.h  BallObject.cpp  BallObject.h  CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.h  GameStates.cpp  GameStates.h  GroundObject.cpp  GroundObject.h  RuntimeLog.txt
Chapter06/: CMakeLists.txt
Chapter06/BookEngine/: Animation.cpp  BookEngine.h  CMakeLists.txt  Camera3D.h  Exception.h  GLTexture.h  IGUIPanel.h  IOManager.h  ParticleManager2D.h  ShaderManager.h  SpriteFont.cpp  SpriteFont.h  StateList.cpp  cmake_install.cmake
Chapter06/ExampleGUI/: App.cpp  App.h  CMakeLists.txt  ExampleGUI.cpp  ExampleGUI.h  ExampleGUI.vcxproj.filters  ExampleGUIScreen.cpp  ExampleGUIScreen.h  Main.cpp  ReadMe.txt  RuntimeLog.txt  stdafx.cpp
Chapter06/Meshes/: ball.mtl
Chapter07/: CMakeLists.txt
Chapter07/ADSExample/: ADSExample.sln  ADSExample.vcxproj  ADSExample.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ErrorLog.txt  GamePlayScreen.cpp  RuntimeLog.txt  cmake_install.cmake
Chapter07/BookEngine/: Animation.h  BookEngine.cpp  Camera3D.h  GameObject.h  IGUIButton.cpp  IGUIButton.h  IGUIObject.h  InputManager.h  Logger.cpp  PNGdecoder.cpp  PNGdecoder.h  ScreenList.h  SkyBox.cpp  SkyBox.h  SpriteBatch.h  Timing.h  cmake_install.cmake
Chapter07/DiffuseExample/: CMakeLists.txt  GamePlayScreen.cpp  RuntimeLog.txt  cmake_install.cmake
Chapter07/DiscardExample/: App.h  CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.h  RuntimeLog.txt  cmake_install.cmake
Chapter07/ParticleExample/: CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.h  RuntimeLog.txt  cmake_install.cmake
Chapter07/PhongExample/: CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.h  RuntimeLog.txt  cmake_install.cmake
Chapter07/Shaders/: Texture.vert
Chapter08/: CMakeLists.txt
Chapter08/BindExample/: CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.h  RuntimeLog.txt
Chapter08/BookEngine/: AnimatedSprite.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  GameObject.cpp  IGUILabel.cpp  IGUIPanel.h  IGame.cpp  IGame.h  IScreen.h  ImageLoader.h  Mesh.cpp  MeshLoader.cpp  ParticleBatch2D.cpp  ResourceManager.cpp  ShaderManager.cpp  StateList.h  UnitConverter.h  VertexShader.vert  cmake_install.cmake
Chapter08/BookEngine/Debug/: BookEngine.exp  BookEngine.lib
Chapter08/DialogExample/: CMakeLists.txt  DialogGUI.cpp  GamePlayScreen.cpp  NPC.cpp  RuntimeLog.txt
Chapter08/QuestExample/: CMakeLists.txt  DialogGUI.h  GamePlayScreen.h  NPC.cpp  NPC.h  Player.h  Quest.cpp  Quest.h  RuntimeLog.txt  cmake_install.cmake
Chapter11/: CMakeLists.txt
Chapter11/BookEngine/: AnimatedSprite.cpp  Camera2D.cpp  IGUI.cpp  IGUI.h  IGUIButton.cpp  IGUILabel.cpp  IGUILabel.h  IGUIPanel.cpp  IGame.h  IGameObject.h  IOManager.cpp  MeshLoader.h  NetherConnector.cpp  NetherConnector.h  ParticleManager2D.cpp  ResourceManager.h  Sprite.cpp  Window.cpp  Window.h
Chapter11/Scripts/: PlayerTest.lua
Chapter11/Shaders/: SimpleShader.vert  skybox.frag  skybox.vert  test.cpp
Chapter11/VRExample/: CMakeLists.txt  DialogGUI.h  GamePlayScreen.cpp  GamePlayScreen.h  GroundObject.h  Main.cpp  NPC.cpp  NPC.h  RuntimeLog.txt
(+68 files in other folders)
